# UsagiPass

./: .dockerignore  .env.example  .env.example.mitm-only  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py.example  content.config.ts  drizzle.config.ts  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  server.prepare.ts  tailwind.config.js
.github/workflows/: backend.yml  docker-build.yml  docs.yml  frontend-localhost.yml  frontend.yml
alembic/: env.py
alembic/versions/: 18209dca9ab7_add_screenshot_tasks.py  2bd0f955d1d3_add_api_token.py  6cd62168a5f4_init_database.py  8ab43a0d0f1f_add_card.py  90684862942a_add_announcement_system.py  9cdcf6f8ca8c_init_database.py  c135931c4bc8_add_show_date.py  d6738b5ada70_refactor_wechat_as_separate_account_.py  d89e6f4b3a2c_add_wahlap_player_fields.py  dd0c9bfac74a_add_card_tables.py  e942f8167a6e_add_card_features.py  fabb6c899d98_add_card_pass_binding.py
app/: app.config.ts  app.vue  database.py  entrypoint.py
app/composables/: useGuestProfile.ts  useImageList.ts  useImages.ts  useTour.ts  useUtils.ts  useWechatCrawl.ts
app/middleware/: redirect-guest.ts  require-guest.ts  require-login.ts
app/pages/: index.vue  preference.vue
app/plugins/: api.ts  intro.client.ts
app/stores/: auth.ts  context.ts  notifications.ts
backend/: .gitignore  config.py.example  main.py  mitm-fallback.py  mitm-realseek.py  mitm.py  requirements.txt
backend/app/: database.py  entrypoint.py
backend/tools/: importer.py  renamer.py
content/docs/: index.md  manual.md
docs/: .gitignore  begin.md  development.md  get-started.md  implementation.md  index.md  privacy-policy.md  terms-of-use.md  thanks.md
docs/.vitepress/: config.mts
docs/announcement/: about-next.md  account-system.md
docs/notifications/: account-system.md
docs/proxies/: clash.md  quantx.md  rocket.md  singbox.md
docs/public/: UsagiPass.conf  UsagiPass.json  UsagiPass.yaml
etc/dev/: UsagiPass.yaml
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.vue  types.ts
public/: UsagiPass.conf  UsagiPass.json  UsagiPass.yaml  UsagiPassDev.yaml
server/api/: [...leporid].ts
server/database/: schema.ts  seed.ts
usagipass/: main.py  mitm.py
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml
(+188 files in other folders)
