[project]
name = "UsagiPass"
version = "0.1.0"
description = ""
authors = [
    {name = "Usagi no Niku",email = "chenbohan911@163.com"}
]
license = "GPL-3.0"
packages = [
    { include = "usagipass" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "maimai-py (>=0.8.7,<0.9.0)",
    "mitmproxy (>=11.1.3,<12.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pymysql (>=1.1.1,<2.0.0)"
]

[tool.poetry.scripts]
app = "usagipass.main:main"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
